Correcting bottom cloud bug and portuguese sintax

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile">
         <img class="profile-pic"src="images/me.png" alt="pedro's-profile-picture">
         <h2>Hello.</h2>
-        <p class="intro">Sou atualmente Supervisor de Recepção no <strong><a href="https://www.ilcampanario.com.br/">IL Campanario Villaggio Resort</a></strong> e estudante de Análise e Desenvolvimento de Sistemas. Dedicado em construções de sites como este 👇🏼</p>
+        <p class="intro">Sou atualmente Supervisor de Recepção no <strong><a href="https://www.ilcampanario.com.br/">IL Campanario Villaggio Resort</a></strong> e estudante de Análise e Desenvolvimento de Sistemas. Dedicado a construções de sites como este 👇🏼</p>
       </div>
       <hr>
       <div class="skills">
@@ -39,7 +39,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Estou disponível para trabalhar como freelancer</h3>
-        <p>Se você tem uma empresa que ainda não está na internet, ou tem um projeto em mente que deseja colocá-lo na internet, por favor:</p>
+        <p>Se você tem uma empresa que ainda não está na internet, ou tem um projeto em mente e deseja colocá-lo na internet, por favor:</p>
         <a class="btn" href="mailto:landgrafpedro@gmail.com">CONTACT ME</a>
       </div>
     </div>
